fixing list hiding behind map on mobile

--- a/css/base.scss
+++ b/css/base.scss
@@ -103,7 +103,7 @@ $navMargin: 65px;
 	}
 
 	@media (max-width: $sm){
-	    top: 30%;
+	    padding-top: 35vh;
 	    left: auto;
 	    width: auto;
 	    min-width: initial;
